Fix download button and hover arrow positioning on IE

--- a/src/_scss/layouts/search/header/_downloadButton.scss
+++ b/src/_scss/layouts/search/header/_downloadButton.scss
@@ -3,12 +3,16 @@
 
     .download-hover {
         position: absolute;
-        top: rem(-23);
+        top: rem(-18);
         left: rem(-290);
         z-index: $z-modal - 1;
 
         width: rem(270);
         height: rem(90);
+
+        .download-hover-interior {
+            position: relative;
+        }
 
         .hover-content {
             @include display(flex);
@@ -47,8 +51,6 @@
         $color-tooltip-border: $color-gold-light;
         @import "components/visualizations/tooltip/_arrow";
         .tooltip-pointer {
-            width: rem(10);
-            height: rem(15);
             // override the coloring
             &:after {
                 background: $color-gold-lightest;
@@ -70,6 +72,8 @@
         @include display(flex);
         @include justify-content(center);
         @include align-items(center);
+        position: relative;
+        width: rem(155);
 
         @include transition(opacity 0.2s ease-in-out);
 
