--- a/src/_scss/layouts/search/header/_formatItem.scss
+++ b/src/_scss/layouts/search/header/_formatItem.scss
@@ -1,6 +1,5 @@
 .format-item {
     @include button-unstyled;
-    vertical-align: middle;
     width: 5rem;
     height: 5rem;
     .item-icon {
