--- a/src/_scss/layouts/search/header/_options.scss
+++ b/src/_scss/layouts/search/header/_options.scss
@@ -5,11 +5,17 @@
         display: none;
         @include media($medium-screen) {
             text-align: right;
-            display: block;
+            
+            @include display(flex);
+            @include flex-direction(row);
+            @include justify-content(center);
+            @include align-items(center);
+            position: relative;
+
         }
     }
     li {
-        display: inline-block;
+        @include flex(0 0 auto);
         margin: 0 0 rem(20) rem(30);
         @include media($large-screen) {
             margin-left: rem(50);
